added bonus section

--- a/01-headers-api-response.ipynb
+++ b/01-headers-api-response.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,8 @@
      "output_type": "stream",
      "text": [
       "Status Code: 200\n",
-      "Response: {'id': 'chatcmpl-8lRlIrFZqPKke7fJRkImHcmZNJSD5', 'object': 'chat.completion', 'created': 1706318824, 'model': 'gpt-4', 'choices': [{'finish_reason': 'length', 'index': 0, 'message': {'role': 'assistant', 'content': \"You're welcome! If you have any more questions or need further information on Azure or any other topic, feel free to\"}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}, 'system_fingerprint': 'fp_6d044fb900'}\n",
-      "Rate Limit Info: {'remaining-requests': '9', 'remaining-tokens': '9604', 'prompt-tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}\n"
+      "Response: {'id': 'chatcmpl-8lRw3m9xObgDpTHgLrV5RgDmoqGHn', 'object': 'chat.completion', 'created': 1706319491, 'model': 'gpt-4', 'choices': [{'finish_reason': 'stop', 'index': 0, 'message': {'role': 'assistant', 'content': 'If you have more questions or need further assistance, please let me know!'}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 15, 'total_tokens': 348}, 'system_fingerprint': 'fp_6d044fb900'}\n",
+      "Rate Limit Info: {'remaining-requests': '9', 'remaining-tokens': '9629', 'prompt-tokens': 333, 'completion_tokens': 15, 'total_tokens': 348}\n"
      ]
     }
    ],
@@ -335,12 +335,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Optional/Bonus) in progress.."
+    "### Bonus: Programmatically Stop Call if Input Tokens Exceed Limit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,13 +420,7 @@
     "        return None, \"Invalid HTTP method. Expected 'get' or 'post'.\", {}\n",
     "    # Pre-Check\n",
     "    body_pre = {\n",
-    "        \"max_tokens\": 24,\n",
-    "        \"temperature\": 1,\n",
-    "        \"top_p\": 1,\n",
-    "        \"user\": \"\",\n",
-    "        \"n\": 1,\n",
-    "        \"presence_penalty\": 0,\n",
-    "        \"frequency_penalty\": 0,\n",
+    "        \"max_tokens\": 1,\n",
     "        \"messages\": [{\"role\": \"assistant\", \"content\": \"\"}],\n",
     "    }\n",
     "    _, _, rate_limit_info = call_azure_openai_chat_completions_api(\n",
@@ -464,16 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-26 19:27:38,237 - micro - MainProcess - INFO     Rate Limit Info: {'remaining-requests': '9', 'remaining-tokens': '9554', 'prompt-tokens': 7, 'completion_tokens': 24, 'total_tokens': 31} (150102916.py:call_azure_openai_chat_completions_api_with_pre_check:39)\n",
-      "2024-01-26 19:27:38,240 - micro - MainProcess - INFO     Tokens Needed for Request: 246 (150102916.py:call_azure_openai_chat_completions_api_with_pre_check:42)\n",
-      "2024-01-26 19:27:38,241 - micro - MainProcess - INFO     Enough tokens remaining, proceed with the request. Remaining tokens: 9554, Tokens needed for request: 246 (150102916.py:call_azure_openai_chat_completions_api_with_pre_check:45)\n"
+      "2024-01-26 19:38:16,501 - micro - MainProcess - INFO     Rate Limit Info: {'remaining-requests': '8', 'remaining-tokens': '9627', 'prompt-tokens': 7, 'completion_tokens': 1, 'total_tokens': 8} (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:35)\n",
+      "2024-01-26 19:38:16,504 - micro - MainProcess - INFO     Tokens Needed for Request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:40)\n",
+      "2024-01-26 19:38:16,504 - micro - MainProcess - INFO     Enough tokens remaining, proceed with the request. Remaining tokens: 9627, Tokens needed for request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:43)\n"
      ]
     },
     {
@@ -481,8 +475,8 @@
      "output_type": "stream",
      "text": [
       "Status Code: 200\n",
-      "Response: {'id': 'chatcmpl-8lRlqSNAsuwGnP02o3yadHtLVAonn', 'object': 'chat.completion', 'created': 1706318858, 'model': 'gpt-4', 'choices': [{'finish_reason': 'length', 'index': 0, 'message': {'role': 'assistant', 'content': \"You're welcome! If you have any more questions, or if there's anything else I can help you with, feel\"}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}, 'system_fingerprint': 'fp_6d044fb900'}\n",
-      "Rate Limit Info: {'remaining-requests': '8', 'remaining-tokens': '9183', 'prompt-tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}\n"
+      "Response: {'id': 'chatcmpl-8lRw9AAXUjL9UxlEGLBAlKLCC1LBF', 'object': 'chat.completion', 'created': 1706319497, 'model': 'gpt-4', 'choices': [{'finish_reason': 'length', 'index': 0, 'message': {'role': 'assistant', 'content': \"You're welcome! If you have any more questions or need further information, feel free to ask. I'm here to\"}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}, 'system_fingerprint': 'fp_6d044fb900'}\n",
+      "Rate Limit Info: {'remaining-requests': '7', 'remaining-tokens': '9256', 'prompt-tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}\n"
      ]
     }
    ],
