add count notebook

--- a/01-headers-api-response.ipynb
+++ b/01-headers-api-response.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fa4384cb235b4b4781ee2af4c997f37b'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "azure_openai_client.api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +312,14 @@
      "output_type": "stream",
      "text": [
       "Status Code: 200\n",
-      "Response: {'id': 'chatcmpl-8lRw3m9xObgDpTHgLrV5RgDmoqGHn', 'object': 'chat.completion', 'created': 1706319491, 'model': 'gpt-4', 'choices': [{'finish_reason': 'stop', 'index': 0, 'message': {'role': 'assistant', 'content': 'If you have more questions or need further assistance, please let me know!'}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 15, 'total_tokens': 348}, 'system_fingerprint': 'fp_6d044fb900'}\n",
-      "Rate Limit Info: {'remaining-requests': '9', 'remaining-tokens': '9629', 'prompt-tokens': 333, 'completion_tokens': 15, 'total_tokens': 348}\n"
+      "Response: {'id': 'chatcmpl-8m1ZcQYr6DQai7vYeqaG6vNFJurmm', 'object': 'chat.completion', 'created': 1706456484, 'model': 'gpt-4', 'choices': [{'finish_reason': 'stop', 'index': 0, 'message': {'role': 'assistant', 'content': \"If you have any more questions or need further assistance, just let me know! I'm here to help.\"}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 22, 'total_tokens': 355}, 'system_fingerprint': 'fp_6d044fb900'}\n",
+      "Rate Limit Info: {'remaining-requests': '9', 'remaining-tokens': '9629', 'prompt-tokens': 333, 'completion_tokens': 22, 'total_tokens': 355}\n"
      ]
     }
    ],
    "source": [
     "status_code, response, rate_limit_info = call_azure_openai_chat_completions_api(\n",
-    "    deployment_id=azure_openai_client.completion_model_name,\n",
+    "    deployment_id=azure_openai_client.chat_model_name,\n",
     "    method=\"post\",\n",
     "    body=body,\n",
     "    api_version=\"2023-05-15\",\n",
@@ -340,11 +360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Union, Optional, List, Dict\n",
+    "import tiktoken\n",
     "\n",
     "\n",
     "def num_tokens_from_input(\n",
@@ -368,7 +389,6 @@
     "    Returns:\n",
     "    int: The total number of tokens in the input.\n",
     "    \"\"\"\n",
-    "    import tiktoken\n",
     "\n",
     "    encoding = tiktoken.get_encoding(encoding_name)\n",
     "\n",
@@ -388,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-26 19:38:16,501 - micro - MainProcess - INFO     Rate Limit Info: {'remaining-requests': '8', 'remaining-tokens': '9627', 'prompt-tokens': 7, 'completion_tokens': 1, 'total_tokens': 8} (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:35)\n",
-      "2024-01-26 19:38:16,504 - micro - MainProcess - INFO     Tokens Needed for Request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:40)\n",
-      "2024-01-26 19:38:16,504 - micro - MainProcess - INFO     Enough tokens remaining, proceed with the request. Remaining tokens: 9627, Tokens needed for request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:43)\n"
+      "2024-01-28 09:41:27,433 - micro - MainProcess - INFO     Rate Limit Info: {'remaining-requests': '119', 'remaining-tokens': '119999', 'prompt-tokens': 7, 'completion_tokens': 1, 'total_tokens': 8} (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:35)\n",
+      "2024-01-28 09:41:27,690 - micro - MainProcess - INFO     Tokens Needed for Request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:40)\n",
+      "2024-01-28 09:41:27,690 - micro - MainProcess - INFO     Enough tokens remaining, proceed with the request. Remaining tokens: 119999, Tokens needed for request: 246 (1966967700.py:call_azure_openai_chat_completions_api_with_pre_check:43)\n"
      ]
     },
     {
@@ -475,8 +495,8 @@
      "output_type": "stream",
      "text": [
       "Status Code: 200\n",
-      "Response: {'id': 'chatcmpl-8lRw9AAXUjL9UxlEGLBAlKLCC1LBF', 'object': 'chat.completion', 'created': 1706319497, 'model': 'gpt-4', 'choices': [{'finish_reason': 'length', 'index': 0, 'message': {'role': 'assistant', 'content': \"You're welcome! If you have any more questions or need further information, feel free to ask. I'm here to\"}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}, 'system_fingerprint': 'fp_6d044fb900'}\n",
-      "Rate Limit Info: {'remaining-requests': '7', 'remaining-tokens': '9256', 'prompt-tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}\n"
+      "Response: {'id': 'chatcmpl-8m1ZgxWEW7Wp1FPUJqSsktID80hfc', 'object': 'chat.completion', 'created': 1706456488, 'model': 'gpt-35-turbo-16k', 'choices': [{'finish_reason': 'length', 'index': 0, 'message': {'role': 'assistant', 'content': 'Sure! Azure OpenAI supports customer managed keys. With customer managed keys, you have control over the encryption keys used to'}}], 'usage': {'prompt_tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}}\n",
+      "Rate Limit Info: {'remaining-requests': '118', 'remaining-tokens': '119975', 'prompt-tokens': 333, 'completion_tokens': 24, 'total_tokens': 357}\n"
      ]
     }
    ],
