add time handling

--- a/01-how-to-get-headers-api-response.ipynb
+++ b/01-how-to-get-headers-api-response.ipynb
@@ -21,9 +21,8 @@
     "4. [**Analyzing Rate Limit Info**](#analyzing-rate-limit-info): Details the steps to analyze the rate limit information from the API response.\n",
     "\n",
     "For additional information, refer to the following resources:\n",
-    "- [AOAI API Documentation](https://learn.microsoft.com/en-us/azure/ai-services/openai/reference)\n",
-    "\n",
-    "And visit the blog here "
+    "- [Visit the blog for deep insights](https://pabloaicorner.hashnode.dev/how-to-extract-and-analyze-azure-openai-response-headers)\n",
+    "- [AOAI API Documentation](https://learn.microsoft.com/en-us/azure/ai-services/openai/reference)\n"
    ]
   },
   {
