--- a/04-how-to-use-streaming.ipynb
+++ b/04-how-to-use-streaming.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "# Define the target directory\n",
     "target_directory = (\n",
-    "    r\"C:\\Users\\pablosal\\Desktop\\gbbai-azure-aoai-faq\"  # change your directory here\n",
+    "    r\"C:\\Users\\pablosal\\Desktop\\gbbai-azure-aoai\"  # change your directory here\n",
     ")\n",
     "\n",
     "# Check if the directory exists\n",
